@@ -84,6 +84,7 @@ New config options:
   Use a specified chat command for respawning or warping to saveMap.
 - statsAdd_over_99: set this option to make Kore lift the restriction on adding
   stat points over 99
+- _whenNotEquipped checkSelfCondition, opposite of _whenEquipped
 
 New commands:
 - cart release: remove cart status
